# ordinal-similarity-metrics

./: README.md  pyproject.toml  run_all_experiments.sh
experiments/plot-rendering-code/: plot_approximate_benchmark.py  plot_clip_visual_text_comparison.py  plot_independent_benchmark.py  plot_model_convergence_to_final_representation.py  plot_outliers_benchmark.py  plot_sensitivity_to_distance_selection.py  plot_validation_accuracy.py
experiments/scripts/: analyze_rep_pair_convergence.py  benchmark_approximate_computations.py  benchmark_independent_representations.py  benchmark_outliers.py  compare_representations_across_seeds.py  compare_visual_textual_representations_clip.py  extract_clip_representations.py  measure_convergence_for_two_randomly_initialized_models.py  train_model_and_compare_representations.py  train_model_and_extract_representations.py  train_vit_cifar10_single_seed_ddp.py  tsi_qsi_sensitivity_to_distance_selection.py
models/: initialization.py  resnet.py  vit-small.py  vit.py  vit_small.py
proofs/: find_all_representative_ordinal_Xs.py  find_global_lower_bound.py  global_lower_bounds.csv  global_lower_bounds_qsi.csv  global_lower_bounds_tsi.csv  remove_metric_invariant_representatives.py  tsi-zero-impossibility-proof.py
proofs/representative_sets/: representative_Xs_n3_eps1e-03.npy  representative_Xs_n4_eps1e-03.npy  representative_Xs_n5_eps1e-03.npy
src/: baselines.py  cka_helper.py  data.py  local_baselines_helper.py  qsi.py  sanity_tests.py  tsi.py  utils.py
tsi/: __init__.py  baselines.py  sanity-tests.py  sanity_tests.py  tsi.py
(+62 files in other folders)
